<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimenMedium"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.lina.singlescreenapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/udacitylogo" />

            <Button
                android:id="@+id/button"
                style="@style/CustomButtonStyle"
                android:text="@string/contact_us" />


        </RelativeLayout>

        <TextView
            android:id="@+id/titleAboutUS"
            style="@style/CustomTitleFontStyle"
            android:text="@string/about_us" />

        <TextView
            android:id="@+id/txtDescription"
            style="@style/CustomTextStyle"
            android:text="@string/description" />

        <TextView
            android:id="@+id/titleContactUs"
            style="@style/CustomTitleFontStyle"
            android:text="@string/contact_us" />

        <TextView
            android:id="@+id/txtPhone"
            style="@style/CustomTextStyle"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/txtWebsite"
            style="@style/CustomTextStyle"
            android:text="@string/website" />

        <TextView
            android:id="@+id/txtAddress"
            style="@style/CustomTextStyle"
            android:text="@string/address" />


    </LinearLayout>
</ScrollView><!--</LinearLayout>-->
